[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/TileMap.tres" type="TileSet" id=1]
[ext_resource path="res://Art/frames/doors_leaf_open.png" type="Texture" id=2]
[ext_resource path="res://Art/frames/doors_leaf_closed.png" type="Texture" id=3]
[ext_resource path="res://Sounds/my_sounds/door.wav" type="AudioStream" id=4]
[ext_resource path="res://Objects/bossDoor.gd" type="Script" id=5]
[ext_resource path="res://Sounds/Music/Fanfare_1.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 32 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, -22 )

[node name="bossDoor" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 5 )

[node name="DoorArea" type="Area2D" parent="."]

[node name="Opened" type="Sprite" parent="DoorArea"]
texture = ExtResource( 2 )

[node name="Closed" type="Sprite" parent="DoorArea"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
shape = SubResource( 1 )

[node name="CollisionClosed" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CollisionOpened" type="CollisionShape2D" parent="."]
position = Vector2( -11, -16 )
shape = SubResource( 3 )

[node name="CollisionOpened2" type="CollisionShape2D" parent="."]
position = Vector2( 15, 6 )
shape = SubResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65537, 3, 1, -131072, 3, 2, -1, 3, 65540, -65536, 3, 65541 )

[node name="doorOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.9
max_distance = 5000.0
attenuation = 3.73213

[node name="winSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[connection signal="body_entered" from="DoorArea" to="." method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="DoorArea" to="." method="_on_DoorArea_body_exited"]
